<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:gravity="center">
  <ImageView
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:adjustViewBounds="true"
      android:contentDescription="@string/game_title"
      app:srcCompat ="@drawable/game_title"/>
  <ImageView
      android:layout_width="124dp"
      android:layout_height="160dp"
      android:contentDescription="@string/rabbit"
      app:srcCompat = "@drawable/rabbit"
      android:layout_marginTop="40dp"
      android:layout_marginBottom="40dp"/>
  <Button
      android:id="@+id/btnStart"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/start"
      android:textSize="32sp"
      android:textColor="@color/white"
      android:fontFamily="@font/fredoka_bold"
      android:paddingHorizontal="32dp"
      android:backgroundTint="#e76f51"
      android:onClick="startGame"
      android:layout_gravity="center" />

  </LinearLayout>