<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            android:background="@drawable/restart"
            android:contentDescription="@string/restart"
            android:onClick="restart"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <ImageButton
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            android:background="@drawable/exit"
            android:contentDescription="@string/exit"
            android:onClick="exit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="140dp"
            android:layout_height="154dp"
            android:id="@+id/ivNewHighest"
            android:src="@drawable/new_highest"
            android:contentDescription="@string/new_record"
            android:visibility="gone"/>
        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableRow
                android:layout_width="wrap_content"
                android:gravity="center">
                <TextView
                    android:fontFamily="@font/fredoka_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="#5D4037"
                    android:textSize="24sp"/>
                <TextView
                    android:fontFamily="@font/fredoka_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPoints"
                    tools:text="50"
                    android:textSize="50sp"
                    android:textColor="@android:color/holo_green_dark"/>
            </TableRow>
        <TableRow android:layout_width="match_parent"
            android:gravity="center">
            <TextView
                    android:fontFamily="@font/fredoka_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest"
                android:textColor="#5D4037"
                android:textSize="24sp"
                android:layout_gravity="center|right"/>
            <TextView
                    android:fontFamily="@font/fredoka_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvHighest"
                tools:text="100"
                android:textSize="24sp"
                android:textColor="@android:color/holo_orange_dark"/>
            </TableRow>
        </TableLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="80dp"/>
    </LinearLayout>
</LinearLayout>



